--- a/src/app/admin/template/headermenu/headermenu.component.html
+++ b/src/app/admin/template/headermenu/headermenu.component.html
@@ -17,8 +17,7 @@
                 <i class="fas fa-user fa-fw"></i>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">Settings</a></li>
-                <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                <li><a class="dropdown-item" href="#!">Ajustes</a></li>
                 <li>
                     <hr class="dropdown-divider" />
                 </li>
