--- a/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
+++ b/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
@@ -50,7 +50,7 @@
     </form>
   
     <!-- Mensaje de error -->
-    <p *ngIf="mensajeError" class="text-danger">{{ mensajeError }}</p>
+    <p *ngIf="mensajeError" style="color: red;">{{ mensajeError }}</p>
   
     <!-- Botón para volver a la lista de usuarios -->
     <a routerLink="/admin/usuarios" class="btn btn-secondary mt-3 w-100">
