fix: Modificar estructura

--- a/src/app/auth/containers/register/register.component.html
+++ b/src/app/auth/containers/register/register.component.html
@@ -75,7 +75,7 @@
                                 </form>
                             </div>
                             <div class="card-footer text-center py-3">
-                                <div class="small"><a routerLink="/login">¿Ya tienes cuenta? Inicia sesión</a></div>
+                                <div class="small"><a routerLink="/login2">¿Ya tienes cuenta? Inicia sesión</a></div>
                             </div>
                         </div>
                     </div>
