--- a/src/app/admin/pages/catalogos/gestiondeventas/gestiondeventas.component.html
+++ b/src/app/admin/pages/catalogos/gestiondeventas/gestiondeventas.component.html
@@ -1,4 +1,4 @@
-< class="container">
+<div class="container">
     <h2>Ventas</h2>
     <button class="nueva-venta-button" (click)="mostrarFormularioNuevaVenta()">
       Nueva +
